--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,13 @@
 <head>
 
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js" defer></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" defer ></script>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
     <script src="{{ url_for('static', filename = 'js/myScript.js') }}" defer></script>
     <title> {% block title %} {% endblock %} | Api Wars</title>
@@ -11,7 +18,25 @@
 </head>
 
 <body>
+{% block navbar %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="#">Planet list </a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Voting statistics </a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Registration </a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Login </a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Logout </a></li>
+            </ul>
+            <div class="wrap-around-logged-in-as">
+                <div class="form-inline my-2 my-lg-0">
+                    <label>Logged in as </label>
+                </div>
+            </div>
+        </div>
+    </nav>
 
+{% endblock %}
 {% block content %}
 {% endblock %}
 
