--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,14 +5,19 @@
 
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js" defer></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" defer ></script>
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename = 'js/myScript.js') }}" defer></script>
+    <script src="{{ url_for('static', filename = 'js/registerAndLoginForm.js') }}" defer></script>
     <title> {% block title %} {% endblock %} | Api Wars</title>
 
 </head>
@@ -22,16 +27,19 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#">Planet list </a></li>
+                <li class="nav-item active"><a class="nav-link" href="/">Planet list </a></li>
                 <li class="nav-item active"><a class="nav-link" href="#">Voting statistics </a></li>
-                <li class="nav-item active"><a class="nav-link" href="#">Registration </a></li>
-                <li class="nav-item active"><a class="nav-link" href="#">Login </a></li>
-                <li class="nav-item active"><a class="nav-link" href="#">Logout </a></li>
+                {% if not logged_in %}
+                    <li class="nav-item active"><a class="nav-link"href="{{ url_for('registration') }}">Registration </a></li>
+                    <li class="nav-item active"><a class="nav-link" href="{{ url_for('login') }}">Login </a></li>
+                {% else %}
+                    <li class="nav-item active"><a class="nav-link" href="{{ url_for('logout') }}">Logout </a></li>
+                {% endif %}
             </ul>
             <div class="wrap-around-logged-in-as">
-                <div class="form-inline my-2 my-lg-0">
-                    <label>Logged in as </label>
-                </div>
+                {% if logged_in %}
+                    <a>Logged in as {{ user_name }}</a>
+                {% endif %}
             </div>
         </div>
     </nav>
